<resources>
    <string name="app_name">Eysenck Test</string>
    <string name="name">Name</string>
    <string name="name_label">Name</string>
    <string name="password">password</string>
    <string name="login_instruction">Введите, пожалуйста, имя и пароль:</string>
    <string name="login_button">Перейти к тестированию</string>
    <string name="textview_Hello">Тест Айзенка</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="test_instruction">Инструкция к тесту</string>
    <string name="start_test_button">Начать тест</string>
    <string name="end_test_button">Закончить тест</string>
    <string name="end_app_button">Закрыть программу</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_question">number Question</string>
    <string name="text_question">textQuestion</string>
    <string name="type_question">type Question</string>
    <string name="scale_question">scale Question</string>
    <string name="no_r_button">Нет</string>
    <string name="yes_r_button">Да</string>
    <string name="itog">Itog</string>
    <string name="back_to_test_button">Повторить тестирование</string>
    <string name="eysenck_portrait_jpg">eysenck_portrait.jpg</string>
    <string name="title">Тест Айзенка (EPI)</string>
    <string name="secondary_text">Приложение для знакомства с тестом Айзенка</string>
    <string name="supporting_text">Только 10 вопросов по шкале Экстраверсия</string>
    <string name="browser_button">Википедия об Айзенке</string>
    <string name="instruction_text">Вам предлагается ответить на 10 вопросов.
        Вопросы направлены на выявление вашего обычного способа поведения.
        Постарайтесь представить типичные ситуации и дайте первый «естественный»
        ответ, который придёт вам в голову. Отвечайте быстро и точно.
        Помните, что нет «хороших» или «плохих» ответов. <br></br>
        Отмечать точками ответ "Нет" не обязательно - отсутствие выбора интерпретируется как "Нет".
        <br></br>Не все вопросы будут видны на экране телефона - пролистывайте экран вниз.</string>
    <string name="instruction_title">Инструкция к тесту</string>
    <string name="result_text">Вы набрали 5 балла из 10 возможных по шкале Экстраверсии.
        Показатель от 0 до 2 - это низкий покзатель, Вы скорее интроверт.
        Показатель от 8 до 10 - это выскоий поаказатель, Вы скорее экстраверт.
        Но помните, что это только ознакомительная часть теста,
        не принимайте результаты слишком близко к сердцу.</string>
</resources>