<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:text="@string/text_question"/>

    <RadioGroup
        android:id="@+id/group_r_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/no_r_button"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textSize="24sp"
            android:text="@string/no_r_button" />

        <RadioButton
            android:id="@+id/yes_r_button"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textSize="24sp"
            android:text="@string/yes_r_button" />

    </RadioGroup>


</LinearLayout>